Extract Mopidy-Local extension from Mopidy core

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -1,4 +1,18 @@
 [local]
 enabled = true
-# TODO: Add additional config values and their default values here, or remove
-# this comment entirely.
+library = json
+media_dir = $XDG_MUSIC_DIR
+scan_timeout = 1000
+scan_flush_threshold = 100
+scan_follow_symlinks = false
+excluded_file_extensions =
+  .directory
+  .html
+  .jpeg
+  .jpg
+  .log
+  .nfo
+  .pdf
+  .png
+  .txt
+  .zip
