pytest: Ignore PendingDeprecationWarning from mopidy
To make the already deprecated warnings more prominent.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,12 @@
+[tool:pytest]
+filterwarnings =
+    ignore::PendingDeprecationWarning:mopidy[.*]
+
+
 [flake8]
 application-import-names = mopidy_local,tests
 exclude = .git,.tox
+
 
 [wheel]
 universal = 1
