Update MANIFEST.in to include all files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include .travis.yml
+include CHANGELOG.rst
 include LICENSE
 include MANIFEST.in
 include README.rst
@@ -6,3 +7,4 @@ include mopidy_local/ext.conf
 include tox.ini
 
 recursive-include tests *.py
+recursive-include tests/data *
