--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,17 @@
-include .travis.yml
-include CHANGELOG.rst
+include *.py
+include *.rst
+include .mailmap
 include LICENSE
 include MANIFEST.in
-include README.rst
-include mopidy_local/ext.conf
+include pyproject.toml
 include tox.ini
+
+recursive-include .circleci *
+recursive-include .github *
+
+include mopidy_*/ext.conf
 
 recursive-include tests *.py
 recursive-include tests/data *
+recursive-include mopidy_local/www *.html
+recursive-include mopidy_local/sql *.sql
