--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,84 @@
-[tool:pytest]
-filterwarnings =
-    ignore::PendingDeprecationWarning:mopidy[.*]
+[metadata]
+name = Mopidy-Local
+version = 3.0.0a2
+url = https://github.com/mopidy/mopidy-local
+author = Stein Magnus Jodal
+author_email = stein.magnus@jodal.no
+license = Apache License, Version 2.0
+license_file = LICENSE
+description = Mopidy extension for playing music from your local music archive
+long_description = file: README.rst
+classifiers =
+    Environment :: No Input/Output (Daemon)
+    Intended Audience :: End Users/Desktop
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Topic :: Multimedia :: Sound/Audio :: Players
+
+
+[options]
+zip_safe = False
+include_package_data = True
+packages = find:
+python_requires = >= 3.7
+install_requires =
+    Mopidy >= 3.0.0a5  # Change to >= 3.0 once final is released
+    Pykka >= 2.0.1
+    setuptools
+    uritools >= 1.0
+
+
+[options.extras_require]
+lint =
+    black
+    check-manifest
+    flake8
+    flake8-bugbear
+    flake8-import-order
+    isort[pyproject]
+release =
+    twine
+    wheel
+test =
+    pytest
+    pytest-cov
+dev =
+    %(lint)s
+    %(release)s
+    %(test)s
+
+
+[options.packages.find]
+exclude =
+    tests
+    tests.*
+
+
+[options.entry_points]
+mopidy.ext =
+    local = mopidy_local:Extension
 
 
 [flake8]
-application-import-names = mopidy_local,tests
-exclude = .git,.tox
-
-
-[wheel]
-universal = 1
+application-import-names = mopidy_local, tests
+max-line-length = 80
+exclude = .git, .tox, build
+select =
+    # Regular flake8 rules
+    C, E, F, W
+    # flake8-bugbear rules
+    B
+    # B950: line too long (soft speed limit)
+    B950
+    # pep8-naming rules
+    N
+ignore =
+    # E203: whitespace before ':' (not PEP8 compliant)
+    E203
+    # E501: line too long (replaced by B950)
+    E501
+    # W503: line break before binary operator (not PEP8 compliant)
+    W503
