--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,23 @@
 [tox]
-envlist = py27, flake8, check-manifest
+envlist = py37, py38, black, check-manifest, flake8
 
 [testenv]
 sitepackages = true
-deps =
-    mock
-    pytest
-    pytest-cov
-    pytest-xdist
+deps = .[test]
 commands =
-    pytest \
+    python -m pytest \
         --basetemp={envtmpdir} \
         --cov=mopidy_local --cov-report=term-missing \
         {posargs}
 
-[testenv:flake8]
-deps =
-    flake8
-    flake8-import-order
-skip_install = true
-commands = flake8
+[testenv:black]
+deps = .[lint]
+commands = python -m black --check .
 
 [testenv:check-manifest]
-deps = check-manifest
-commands = check-manifest
+deps = .[lint]
+commands = python -m check_manifest
+
+[testenv:flake8]
+deps = .[lint]
+commands = python -m flake8 --show-source --statistics
