Add use_album_mbid_uri and use_artist_mbid_uri config options. These were present in mopidy-local-sqlite and are needed in some cases to prevent albums being sorted under the wrong artist when multiple artists or multiple MBIDs are present.

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -37,6 +37,12 @@ timeout = 10
 # if not all artists in the library have proper sortnames
 use_artist_sortname = false
 
+# Set these to false to not use MusicBrainz IDs to create URIs
+# for artists and albums respectively. This is enabled by default
+# but can cause multi-artist albums to be sorted under the wrong artist
+use_artist_mbid_uri = true
+use_album_mbid_uri = true
+
 # a list of file names to check for when searching for external album
 # art; may contain UNIX shell patterns, i.e. "*", "?", etc.
 album_art_files = *.jpg, *.jpeg, *.png
