--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -6,6 +6,7 @@ scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
 excluded_file_extensions =
+  .cue
   .directory
   .html
   .jpeg
