added an included_file_extensions configuration

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -17,6 +17,7 @@ excluded_file_extensions =
   .png
   .txt
   .zip
+included_file_extensions = 
 
 # top-level directories for browsing, as <name> <uri>
 directories =
