Added an included_file_extensions configuration: closes #8 (#32)
* added an included_file_extensions configuration

* reformatted using black

* Several fixes to address jodal comments

* regularized wording of debug log

* reformatted with black

* fix order

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -5,6 +5,7 @@ media_dir = $XDG_MUSIC_DIR
 scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
+included_file_extensions =
 excluded_file_extensions =
   .cue
   .directory
@@ -17,6 +18,7 @@ excluded_file_extensions =
   .png
   .txt
   .zip
+
 
 # top-level directories for browsing, as <name> <uri>
 directories =
