--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -1,6 +1,7 @@
 [local]
 enabled = true
 library = sqlite
+max_search_results = 100
 media_dir = $XDG_MUSIC_DIR
 scan_timeout = 1000
 scan_flush_threshold = 100
