Add setting "min_art_size" to prevent generating very small covers
For instance I see sometimes empty covers that are actually just a white
pixel. They shouldn't be considered as album covers.

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -44,3 +44,6 @@ use_artist_sortname = false
 # a list of file names to check for when searching for external album
 # art; may contain UNIX shell patterns, i.e. "*", "?", etc.
 album_art_files = *.jpg, *.jpeg, *.png
+
+# minimum required size, in pixels, for an image to be picked up as an album cover
+min_art_size = 32
