Rename setting, better explain, default to 0 (disabled)
Add tests of album covers processing

--- a/mopidy_local/ext.conf
+++ b/mopidy_local/ext.conf
@@ -45,5 +45,6 @@ use_artist_sortname = false
 # art; may contain UNIX shell patterns, i.e. "*", "?", etc.
 album_art_files = *.jpg, *.jpeg, *.png
 
-# minimum required size, in pixels, for an image to be picked up as an album cover
-min_art_size = 32
+# minimum required dimensions, in width and height and in pixels, for
+# an image to be picked up as an album cover. Set zero to disable.
+album_art_min_dimensions = 0
