--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 name = "mopidy-local"
 description = "Mopidy extension for playing music from your local music archive"
 readme = "README.rst"
-requires-python = ">= 3.9"
+requires-python = ">= 3.11"
 license = { text = "Apache-2.0" }
 authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
 classifiers = [
@@ -16,8 +16,6 @@ classifiers = [
 	"License :: OSI Approved :: Apache Software License",
 	"Operating System :: OS Independent",
 	"Programming Language :: Python :: 3",
-	"Programming Language :: Python :: 3.9",
-	"Programming Language :: Python :: 3.10",
 	"Programming Language :: Python :: 3.11",
 	"Topic :: Multimedia :: Sound/Audio :: Players",
 ]
@@ -51,7 +49,7 @@ local = "mopidy_local:Extension"
 
 
 [tool.black]
-target-version = ["py39", "py310", "py311"]
+target-version = ["py311"]
 line-length = 80
 
 
