--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,30 +16,31 @@ jobs:
             python: "3.11"
             tox: py311
             coverage: true
-          - name: "Lint: check-manifest"
-            python: "3.11"
-            tox: check-manifest
-          - name: "Lint: flake8"
-            python: "3.11"
-            tox: flake8
+          - name: "Lint: ruff lint"
+            python: "3.12"
+            tox: ruff-lint
+          - name: "Lint: ruff format"
+            python: "3.12"
+            tox: ruff-format
 
     name: ${{ matrix.name }}
     runs-on: ubuntu-22.04
     container: ghcr.io/mopidy/ci:latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Fix home dir permissions to enable pip caching
         run: chown -R root /github/home
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
           cache: pip
-          cache-dependency-path: setup.cfg
-      - run: python -m pip install pygobject tox
+      - run: python -m pip install tox
       - run: python -m tox -e ${{ matrix.tox }}
         if: ${{ ! matrix.coverage }}
       - run: python -m tox -e ${{ matrix.tox }} -- --cov-report=xml
         if: ${{ matrix.coverage }}
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         if: ${{ matrix.coverage }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
