--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,15 +28,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-lint = [
-	"black",
-	"check-manifest",
-	"flake8",
-	"flake8-black",
-	"flake8-bugbear",
-	"flake8-import-order",
-	"isort",
-]
+lint = ["ruff >= 0.5"]
 test = ["pytest", "pytest-cov"]
 dev = ["mopidy-local[lint,test]", "tox"]
 
@@ -48,19 +40,52 @@ Issues = "https://github.com/mopidy/mopidy-local/issues"
 local = "mopidy_local:Extension"
 
 
-[tool.black]
-target-version = ["py311"]
-line-length = 80
+[tool.ruff]
+target-version = "py311"
 
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+	"ANN",    # flake8-annotations  # TODO
+	"ANN101", # missing-type-self
+	"ANN102", # missing-type-cls
+	"ANN401", # any-type
+	"BLE001", # blind-except  # TODO
+	"D",      # pydocstyle
+	"EM101",  # raw-string-in-exception  # TODO
+	"FIX001", # line-contains-fixme
+	"FIX002", # line-contains-todo
+	"G002",   # logging-percent-format
+	"G004",   # logging-f-string
+	"ISC001", # single-line-implicit-string-concatenation
+	"PTH123", # builtin-open  # TODO
+	"RUF012", # mutable-class-default  # TODO
+	"S101",   # assert  # TODO
+	"TD002",  # missing-todo-author
+	"TD003",  # missing-todo-link
+	"TRY003", # raise-vanilla-args
+	"TRY400", # error-instead-of-exception
+	"UP031",  # printf-string-formatting  # TODO
+	#
+	# These rules interfere with `ruff format`
+	"COM812", # missing-trailing-comma
+	"ISC001", # single-line-implicit-string-concatenation
+]
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-known_tests = "tests"
-sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = [
+	"ANN",     # flake8-annotations
+	"ARG",     # flake8-unused-arguments
+	"D",       # pydocstyle
+	"FBT",     # flake8-boolean-trap
+	"PLR0913", # too-many-arguments
+	"PLR2004", # magic-value-comparison
+	"PT011",   # pytest-raises-too-broad  # TODO
+	"PT027",   # pytest-unittest-raises-assertion
+	"S101",    # assert
+	"SLF001",  # private-member-access
+	"TRY002",  # raise-vanilla-class
+]
 
 
 [tool.setuptools_scm]
