--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py311, ruff-lint, ruff-format
+envlist = py311, py312, py313, ruff-lint, ruff-format
 
 [testenv]
 sitepackages = true
