--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,20 +14,20 @@ jobs:
         include:
           - name: "Test: Python 3.11"
             python: "3.11"
-            tox: py311
+            tox: "3.11"
           - name: "Test: Python 3.12"
             python: "3.12"
-            tox: py312
+            tox: "3.12"
           - name: "Test: Python 3.13"
             python: "3.13"
-            tox: py313
+            tox: "3.13"
             coverage: true
           - name: "Lint: ruff lint"
             python: "3.13"
-            tox: ruff-lint
+            tox: "ruff-lint"
           - name: "Lint: ruff format"
             python: "3.13"
-            tox: ruff-format
+            tox: "ruff-format"
 
     name: ${{ matrix.name }}
     runs-on: ubuntu-22.04
