--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,7 @@
-[build-system]
-requires = ["setuptools >= 66", "setuptools-scm >= 7.1"]
-build-backend = "setuptools.build_meta"
-
-
 [project]
 name = "mopidy-local"
 description = "Mopidy extension for playing music from your local music archive"
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">= 3.11"
 license = { text = "Apache-2.0" }
 authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
@@ -15,31 +10,66 @@ classifiers = [
     "Intended Audience :: End Users/Desktop",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Topic :: Multimedia :: Sound/Audio :: Players",
 ]
 dynamic = ["version"]
 dependencies = [
     "mopidy >= 4.0.0a1",
-    "pykka >= 2.0.1",
+    "pykka >= 4",
     "setuptools >= 66",
-    "uritools >= 1.0",
+    "uritools >= 4",
 ]
 
-[project.optional-dependencies]
-lint = ["ruff >= 0.8.2"]
-test = ["pytest >= 7.2", "pytest-cov >= 4.0"]
-dev = ["mopidy-local[lint,test]", "tox >= 4.21"]
-
 [project.urls]
-Source = "https://github.com/mopidy/mopidy-local"
-Issues = "https://github.com/mopidy/mopidy-local/issues"
+Homepage = "https://github.com/mopidy/mopidy-local"
 
 [project.entry-points."mopidy.ext"]
 local = "mopidy_local:Extension"
+
+
+[build-system]
+requires = ["setuptools >= 66", "setuptools-scm >= 7.1"]
+build-backend = "setuptools.build_meta"
+
+
+[dependency-groups]
+dev = [
+    "tox",
+    { include-group = "ruff" },
+    { include-group = "tests" },
+    { include-group = "typing" },
+]
+ruff = ["ruff"]
+tests = ["pytest", "pytest-cov"]
+typing = ["pyright"]
+
+
+[tool.coverage.paths]
+source = ["src/", "*/site-packages/"]
+
+[tool.coverage.run]
+source_pkgs = ["mopidy_local"]
+
+[tool.coverage.report]
+show_missing = true
+
+
+[tool.pyright]
+pythonVersion = "3.11"
+typeCheckingMode = "standard"
+# Not all dependencies have type hints:
+reportMissingTypeStubs = false
+# Already covered by ruff's flake8-self checks:
+reportPrivateImportUsage = false
+
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    # By default, fail tests on warnings from our own code
+    "error:::mopidy_local",
+    #
+    # Add any warnings you want to ignore here
+]
 
 
 [tool.ruff]
@@ -67,7 +97,7 @@ ignore = [
     "TRY400", # error-instead-of-exception
     "UP031",  # printf-string-formatting  # TODO
     #
-    # These rules interfere with `ruff format`
+    # Conflicting with `ruff format`
     "COM812", # missing-trailing-comma
     "ISC001", # single-line-implicit-string-concatenation
 ]
@@ -88,29 +118,40 @@ ignore = [
 ]
 
 
+[tool.setuptools.package-data]
+"*" = ["*.conf"]
+
+
 [tool.setuptools_scm]
+# This section, even if empty, must be present for setuptools_scm to work
 
 
 [tool.tox]
-requires = ["tox >= 4.21"]
-env_list = ["3.11", "3.12", "3.13", "ruff-lint", "ruff-format"]
+env_list = ["3.11", "3.12", "3.13", "pyright", "ruff-check", "ruff-format"]
 
 [tool.tox.env_run_base]
-deps = [".[test]"]
+package = "wheel"
+wheel_build_env = ".pkg"
+dependency_groups = ["tests"]
 commands = [
     [
         "pytest",
+        "--cov",
         "--basetemp={envtmpdir}",
-        "--cov=mopidy_local",
-        "--cov-report=term-missing",
-        "{posargs}",
+        { replace = "posargs", extend = true },
     ],
 ]
 
-[tool.tox.env.ruff-lint]
-deps = [".[lint]"]
+[tool.tox.env.pyright]
+dependency_groups = ["typing"]
+commands = [["pyright", "{posargs:src}"]]
+
+[tool.tox.env.ruff-check]
+skip_install = true
+dependency_groups = ["ruff"]
 commands = [["ruff", "check", "{posargs:.}"]]
 
 [tool.tox.env.ruff-format]
-deps = [".[lint]"]
+skip_install = true
+dependency_groups = ["ruff"]
 commands = [["ruff", "format", "--check", "{posargs:.}"]]
