--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,9 +1,8 @@
-_commit: v1.1.0
+_commit: v2.0.0
 _src_path: gh:mopidy/mopidy-ext-template
 author_email: stein.magnus@jodal.no
 author_full_name: Stein Magnus Jodal
-repo_name: mopidy-local
-dist_name: Mopidy-Local
+dist_name: mopidy-local
 ext_name: local
 github_username: mopidy
 short_description: Mopidy extension for playing music from your local music archive
