Remove dep on setuptools
As we no longer use pkg_resources.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,7 @@ classifiers = [
     "Topic :: Multimedia :: Sound/Audio :: Players",
 ]
 dynamic = ["version"]
-dependencies = [
-    "mopidy >= 4.0.0a3",
-    "pykka >= 4",
-    "setuptools >= 66",
-    "uritools >= 4",
-]
+dependencies = ["mopidy >= 4.0.0a3", "pykka >= 4", "uritools >= 4"]
 
 [project.urls]
 Homepage = "https://github.com/mopidy/mopidy-local"
